# user-client

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml
.github/workflows/: ci.yml
docs/: index.md
docs/admin/: configuration.md  maintenance.md
docs/api/: api-catalog.md  endpoint-specification.md  usage.md
docs/api/schema/: example.json  v1.json
docs/design/: more-design.md  overview.md
docs/getting-started/: more-getting-started.md  quick-start.md
docs/usage/: howtos.md  tutorials.md
eoepca-client/: .gitignore  README.md  pyproject.toml
eoepca-client/eoepca_client/: __init__.py  auth.py  catalog.py  cli.py  client.py  config.py  logging.py  models.py  stac_tx.py
eoepca-client/tests/: test_auth.py  test_catalog.py  test_cli.py  test_client.py  test_config.py  test_e2e.py  test_eoepca_client.py  test_logging.py  test_models.py  test_stac_tx.py
eoepca-client/tests/data/: api-catalog.json
