[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoepca-client"
version = "0.0.1"
description = "Client library and CLI for EOEPCA."
requires-python = ">=3.12"
authors = [
    { name = "Development Seed" }
]
dependencies = [
    "loguru>=0.7.3",
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.build.targets.sdist.force-include]
"../LICENSE" = "LICENSE"

[tool.hatch.build.targets.wheel]
packages = ["eoepca_client"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "eoepca_client.logging"
disable_error_code = ["return-value"]

[tool.pytest.ini_options]
addopts = [
    "--cov=eoepca_client",
    "--cov-fail-under=90",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["eoepca_client"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
